# ml-in-rust

./: Cargo.toml  README.md  build.rs
src/: lib.rs  main.rs  mnist_loader.rs
src/kernels/: activations.cu  activations.ptx  optimizer.cu  optimizer.ptx
src/kernels/layers/: conv_2d.cu  conv_2d.ptx  dense_layer.cu  dense_layer.ptx  max_pool_2d.cu  max_pool_2d.ptx  parallel.cu  parallel.ptx  split.cu  split.ptx
src/layers/: activation.rs  conv_2d.rs  dense.rs  max_pool_2d.rs  mod.rs  network.rs  optimizer.rs  parallel.rs  split.rs
tests/: conv_2d_multi_channel_test.rs  conv_2d_test.rs
