[package]
name = "gpu-accelerated-machine-learning"
version = "0.1.0"
edition = "2024"

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "machine_learning_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[dependencies]
cust = "0.3.2"
nalgebra = { version = "0.33.2", features = ["serde-serialize"] }
rand = "0.9.2"
